# insulintel-semantic-models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/prompts/: continueAuditWork.prompt.md  deepRepoAuditAndFix.prompt.md
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
app/: __init__.py  deployer.py  snapshot_manager.py  streamlit_app.py
deploy/: deploy_agent.sql  sem_activity.yaml  sem_insulintel.yaml  sem_nhanes.yaml  set_custom_instructions.sql
instructions/: assembly.yaml
instructions/_global/: medical_disclaimer.yaml  response_format.yaml  safety_guardrails.yaml  time_defaults.yaml
instructions/_global/instructions/sem_insulintel/: identity.yaml
instructions/agent_insulintel/: orchestration_instructions.yaml  response_instructions.yaml
instructions/sem_activity/: identity.yaml  response_format.yaml  routing_keywords.yaml
instructions/sem_insulintel/: response_format.yaml  routing_keywords.yaml  scope_rules.yaml
instructions/sem_nhanes/: identity.yaml  response_format.yaml  routing_keywords.yaml
scripts/: _check_ddl.py  build_deploy.py  deploy.sql  deploy_agent.sql  deploy_all.py  fn_insight_of_the_day.sql  validate_repo.py
scripts/semantic_diff/: __init__.py  assemble.py  canonical.py  cli.py  constants.py  diff_engine.py  export_sf.py  instructions.py  normalize_sf.py  normalize_yaml.py  snapshot.py
semantic_views/: sem_activity  sem_activity.yaml  sem_insulintel.yaml  sem_nhanes.yaml
tests/: conftest.py  test_assemble.py  test_build_deploy.py  test_deployer.py  test_diff_engine.py  test_live_integration.py  test_normalize_sf.py  test_normalize_yaml.py  test_snapshot_manager.py  test_validate_repo.py
