[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insulintel-semantic-models"
version = "0.1.0"
description = "Semantic model definitions and diff engine for Insulintel / wellness analytics on Snowflake."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "streamlit>=1.30.0",
    "snowflake-connector-python>=3.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
semantic-diff = "semantic_diff.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["semantic_diff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
